# msbs-chatbot

./: Makefile  README.md  demo_rag.ipynb  demo_rag_bm25_ensm.ipynb  demo_rag_ocr_only.ipynb  demo_rag_text_only.ipynb  main.py  pyproject.toml  requirements.txt
dataset/: e-F@ctory Model Line_Makinarock_시나리오.xlsx  example_questions.txt
faiss/: demo_rag_ocr.faiss  demo_rag_ocr.pkl  demo_rag_txt.faiss  demo_rag_txt.pkl
src/mistubishi_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
